--- a/Biblioteca.CQRS.Infrastrucure/Biblioteca.CQRS.Infrastrucure.csproj
+++ b/Biblioteca.CQRS.Infrastrucure/Biblioteca.CQRS.Infrastrucure.csproj
@@ -4,11 +4,16 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <RootNamespace>Biblioteca.CQRS.Command</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Biblioteca.CQRS.Domain\Biblioteca.CQRS.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Dapper" Version="2.1.35" />
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
     </ItemGroup>
 
 </Project>
